# Medical-note-generator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
django_app/: API.md  Dockerfile  manage.py  pyproject.toml
django_app/apps/: __init__.py
django_app/apps/common/: __init__.py  exceptions.py  permissions.py  validators.py
django_app/apps/notes/: __init__.py  admin.py  urls.py
django_app/apps/notes/api/: __init__.py
django_app/apps/notes/clients/: __init__.py  groq_client.py  whisperx_client.py
django_app/apps/notes/migrations/: 0001_initial.py  __init__.py
django_app/apps/notes/models/: __init__.py  audio_recording.py  clinical_note.py  transcript_segment.py  transcription_job.py
django_app/apps/notes/prompts/: soap_note_v1.txt  summary_v1.txt
django_app/apps/notes/selectors/: __init__.py  note.py  transcript.py
django_app/apps/notes/services/: __init__.py  create_job.py  generate_note.py  transcribe_audio.py
django_app/apps/notes/tests/: factories.py  test_models.py  test_services_create_job.py  test_services_generate_note.py  (+1 more)
django_app/config/: urls.py
django_app/config/settings/: __init__.py  base.py
whisperx_service/: DockerFIle  SCRIBE.md  pyproject.toml
whisperx_service/app/: __init__.py  main.py
whisperx_service/app/api/: __init__.py  routes.py
whisperx_service/app/core/: __init__.py  config.py
whisperx_service/app/schemas/: __init__.py  transcription.py
whisperx_service/app/services/: __init__.py  preprocessing.py  transcriber.py
whisperx_service/app/tests/: test_health.py
(+8 files in other folders)
